v0.0.3.7:
- Movies:
	- Added info about if subs are internal or not
	- Added info about the format of the subs
- TV-Shows:
	- Added info about if subs are internal or not
	- Added info about the format of the subs

v0.0.3.6:
-	Audio:
	- Fixed a problem with very large albums would make the plugin crash
		(Various Artists mostly)
		This sadly meant a complete rewrite of the Audio export, but sadly
		caused a different output than before. Export is however faster :-)
			-	And Kudo goes to OttoKerner for spoting this issue

V0.0.3.5:
- Playlists:
	- Movie/TV-Shows:
		- Added Playlist Item Id
		- Added Basic export level
	- Audio:
		- Added Playlist Item Id
		- Added Basic export level
	- Photo:
		- Added simple info for a photo playlist
		- Added Basic export level

V0.0.3.4:
- Movies:
	- Added Country as field for export level Basic and above
- Playlists:
	- Can now export a simple info for an movies/tv-shows playlist
	- Can now export a simple info for an audio playlist

V0.0.3.3:
- Audio:
	- Added Extended level...See github Wiki for the new fields

V0.0.3.2:
-	General:
	- Fixed a bug causing the sections not to show on newer versions of PMS

V0.0.3.1:
-	General:
	-	Added a new pref. setting named "Auto Select Export path to match the section exported"
		-	When above is selected, the export file will be created in the same directory as the items scanned.
		-	This should help people having trouble setting a custom export path

V0.0.3.0
- General:
	- Since we are back into the framework, token auth. is no longer needed, and as such, has been removed
- Movies:
	- Fixed an issue, where a guid was exported as IMDB id, even though none existed for a Home movie section
	- Fixed a regression with export of a large movie library, where the counter was fixed at 0 on the screen...cosmetic error only
- Audio:
	- Moved Audio export back into the framework, so now we don't stress PMS when dealing with a huge Audio library, but grap it in trunks of 3